[package]
name = "markdownlint-rs"
version = "0.3.17"
edition = "2024"
description = "A fast, flexible, configuration-based command-line interface for linting Markdown/CommonMark files"
repository = "https://github.com/swanysimon/mdlint"
license = "Unlicense"
keywords = ["cli", "formatter", "lint", "markdown"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "mdlint"
path = "src/lib.rs"

[[bin]]
name = "mdlint"
path = "src/main.rs"

[dependencies]
clap = { version = "^4.6.1", features = ["derive"] }
globset = ">= 0.4.18, < 1"
ignore = ">= 0.4.25, < 1"
lsp-server = ">= 0.7.9, < 1"
lsp-types = ">= 0.97, < 1"
pulldown-cmark = ">= 0.13.4, < 1"
rayon = "^1.12.0"
regex = "^1.12.3"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.150"
thiserror = "^2.0.18"
toml = "^1.1.2"
url = "^2.5.8"

[dev-dependencies]
proptest = "^1.11.0"
tempfile = "^3.27.0"

[lints.clippy]
all = "deny"

[lints.rust]
warnings = "deny"

[profile.dev]
debug = 1

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
