[project]
name = "markdownlint-rs"
version = "0.3.17"
description = "Opinionated Markdown formatter and linter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Unlicense" }
keywords = ["formatter", "linter", "markdown"]
classifiers = [
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/swanysimon/mdlint"
Issues = "https://github.com/swanysimon/mdlint/issues"
Repository = "https://github.com/swanysimon/mdlint"

[project.scripts]
markdownlint-rs = "mdlint.__main__:main"
mdlint = "mdlint.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mdlint"]
artifacts = ["mdlint/mdlint", "mdlint/mdlint.exe"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
